-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.0
-
OS X 10.10.2
-
-
0cc881b5bf8a4a6da8277d5166da92a1675f4654
Create a qml app with WebEngineView, set url to http://google.com
Keyboard shortcutsfor clipboard (Cmd+C/Cmd+X/Cmd+V) do not work in search input field, or any other input or textarea
- duplicates
-
QTBUG-45784 copy & paste not working in WebEngineView
-
- Closed
-
| For Gerrit Dashboard: QTBUG-44289 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 115432,3 | Add WebAction to QML api | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |