Add WebAction to QML api

Adds WebActions matching QWebEnginePage to QQuickWebEngineView, this
makes it possible to support copy/paste on OS X, and makes it possible
to do rich text copy to clipboard on all platforms.

Change-Id: If43c1b2e8ae0496423f830cfe6b86e0fa1b8126e
Task-number: QTBUG-44289
Reviewed-by: Andras Becsi <andras.becsi@theqtcompany.com>