src/webengine/api/qquickwebengineview_p.h
@@ -73,7 +73,7 @@ private:
     bool m_toggleOn;
 };
 
-#define LATEST_WEBENGINEVIEW_REVISION 2
+#define LATEST_WEBENGINEVIEW_REVISION 3
 
 class Q_WEBENGINE_PRIVATE_EXPORT QQuickWebEngineView : public QQuickItem {
     Q_OBJECT
@@ -105,6 +105,7 @@ class Q_WEBENGINE_PRIVATE_EXPORT QQuickWebEngineView : public QQuickItem {
     Q_ENUMS(Feature);
     Q_ENUMS(JavaScriptConsoleMessageLevel);
     Q_FLAGS(FindFlags);
+    Q_ENUMS(WebAction);
 
 public:
     QQuickWebEngineView(QQuickItem *parent = 0);
@@ -173,6 +174,27 @@ public:
         Geolocation
     };
 
+    enum WebAction {
+        NoWebAction = - 1,
+        Back,
+        Forward,
+        Stop,
+        Reload,
+
+        Cut,
+        Copy,
+        Paste,
+
+        Undo,
+        Redo,
+        SelectAll,
+        ReloadAndBypassCache,
+
+        PasteAndMatchStyle,
+
+        WebActionCount
+    };
+
     // must match WebContentsAdapterClient::JavaScriptConsoleMessageLevel
     enum JavaScriptConsoleMessageLevel {
         InfoMessageLevel = 0,
@@ -218,6 +240,7 @@ public Q_SLOTS:
     Q_REVISION(1) void fullScreenCancelled();
     Q_REVISION(1) void grantFeaturePermission(const QUrl &securityOrigin, Feature, bool granted);
     Q_REVISION(2) void setActiveFocusOnPress(bool arg);
+    Q_REVISION(3) void triggerWebAction(WebAction action);
 
 Q_SIGNALS:
     void titleChanged();
