src/webenginewidgets/api/qwebenginepage.cpp
@@ -838,21 +838,6 @@ void QWebEnginePagePrivate::moveValidationMessage(const QRect &anchor)
 #endif
 }
 
-namespace {
-class SaveToClipboardFunctor
-{
-    QString m_text;
-public:
-    SaveToClipboardFunctor(const QString &text)
-      : m_text(text)
-    {}
-    void operator()() const
-    {
-        qApp->clipboard()->setText(m_text);
-    }
-};
-}
-
 QMenu *QWebEnginePage::createStandardContextMenu()
 {
     Q_D(QWebEnginePage);
@@ -879,9 +864,7 @@ QMenu *QWebEnginePage::createStandardContextMenu()
         connect(action, &QAction::triggered, d->view, &QWebEngineView::reload);
         menu->addAction(action);
     } else {
-        action = new QAction(tr("Copy..."), menu);
-        connect(action, &QAction::triggered, SaveToClipboardFunctor(contextMenuData.selectedText));
-        menu->addAction(action);
+        menu->addAction(QWebEnginePage::action(Copy));
     }
 
     if (!contextMenuData.linkText.isEmpty() && contextMenuData.linkUrl.isValid()) {
